--- a/css/style.css
+++ b/css/style.css
@@ -4,32 +4,10 @@ box-sizing: 0;}
 
 *{font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
 /*Nav*/
-.nav{
-    position: static;
-    top: 0;
-    z-index: 2;
-    width: 100%;
-    background-color: black;
-}
-
-.nav-list{  
-text-align: right;
-padding: 10px;
-}
-
-.nav-list li {
-    margin: 30px;
-    background-color: red;
-    border-radius: 10px;
-    display: inline-block;
-    font-size: 30px;
-}
-
-.nav-link{
-    text-decoration: none;
-    padding: 10px;
+.navbar-brand {
     color: black;
 }
+
 
 .full-back{
     background-size: cover;
