--- a/css/style.css
+++ b/css/style.css
@@ -3,28 +3,64 @@ margin: 0;
 box-sizing: 0;}
 
 *{font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
-/*Nav*/
-.navbar-brand {
-    color: black;
+/*index*/
+.grid-layout-1{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto;
+    grid-template-areas: 
+    'area1 area2'
+    'area3 area3';
+    justify-content: center;
+    margin: 1%;
+    gap: 5px;
+    padding-top: 20px;
 }
 
+    
+    
 
+.caja-i{
+    color: red;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.500);
+    height: 100%;
+    text-align: center;
+}
+.caja-i h4{
+    text-decoration: underline;
+    text-align: center;
+}
+.caja-i h3{
+    text-decoration: underline;
+    text-align: center;
+}
+.caja-i img{
+    width: 50%;
+    height: auto;
+    object-fit: cover;
+    
+}
 .full-back{
+    background-image: url(../multimedia/humo.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url(../multimedia/humo.jpg)   
-    
+}
+
+.c1{
+    grid-area: area1;
     
 }
-.logo{
-    position: absolute;
-    height: 45px;
-    width: 45px;
-    top: 0;
-    padding: 20px;
-    margin: 20px;
+.c2{
+    grid-area: area2;
 }
-    
+.c3{grid-area: area3;
+    text-align: center;
+    font-size: 24px;
+}
+
 
 /*albumes*/
 
@@ -50,67 +86,6 @@ background-color: rgba(0, 0, 0, 0.501);
     background-color: rgba(0, 0, 0, 0.501);
 }
 
-
-
-.noticias{
-    color: white;
-    padding: 10px;  
-    width: 25%;
-    height: auto;
-    ;
-}
-#landing-p{
-    padding-top: 25px;
-}
-
-/*videoclips index*/
-.welcome{
-    width: 100%;
-    color: white;
-    font-size: 36px;
-    text-align: center;
-    text-decoration: solid;
-    margin: 0;
-    border-radius: 10px;
-    background-color: black;
-    padding-bottom: 10px;
-    
-}
-
-.videoclips1{
-    color: red;
-    text-align: left;
-padding-top: 20px;
-font-size: 30px;
-margin: 20px;
-background-color: rgba(0, 0, 0, 0.501);
-}
-.videoclips1 button{
-    margin: 20px;
-    font-size: 20px;
-}
-.videoclips1 h4 {
-    position: absolute;
-    right: 25%;
-    top: 32%;
-    text-decoration: underline;
-    
-}
-.videoclips1 p{
-    position: absolute;
-    height: 45%;
-    width: 50%;
-    right: 20px;
-    top: 40%; 
-}
-.videoclip2{
-    color: red;
-    text-align: center;
-    padding-top: 20px;
-    font-size: 30px;
-    margin: 20px;
-    background-color: rgba(0, 0, 0, 0.501);
-}
 
 
 /*Biografia*/
