--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ box-sizing: 0;}
 
 *{font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
 /*index*/
+
 .grid-layout-1{
     width: 100%;
     height: 100%;
@@ -17,6 +18,14 @@ box-sizing: 0;}
     margin: 1%;
     gap: 5px;
     padding-top: 20px;
+}
+.c3 iframe{
+    width:50%;
+    height: 315px;
+}
+.c1 iframe{
+    width: 70%;
+    height: 70%
 }
 
     
@@ -96,6 +105,10 @@ box-sizing: 0;}
 .grid-layout-3 h3{
     text-decoration: underline;
 }
+.ca5{
+    grid-area: area5;
+    display: none;
+}
 /*Biografia*/
 .grid-layout-4{
     display: grid;
@@ -103,7 +116,7 @@ box-sizing: 0;}
     grid-template-rows: auto;
     grid-template-areas: 'area1 area2'
     'area1 area2';
-    text-align: center;
+    
     padding-top: 5%;
     margin: 1%;
     gap: 5px;
@@ -157,30 +170,37 @@ box-sizing: 0;}
 }
 
     /*contacto*/
-    .cont1{
-    color: red;
-    background-color:rgba(0, 0, 0, 0.501) ;
+   .grid-layout-5{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: auto;
+    margin: 1%;
+    padding-top: 5%;
+    grid-template-areas: 'area1 area1'
+    'area2 area3'
+    'area2 area3'
+    'area2 area3';
+    text-align: center;
     font-size: 24px;
-    text-align: center;
-    padding: 20px;
-    height: 100%;
-    padding-bottom: 300px;
- }
- .form1{
-    position: relative;
-    height: 100%;
-    text-align: center;
-    padding: 50px;
-   
-
+    align-items: center;
 }
-.eml1{
-    left: 44%;
-    position: absolute;
-    top: 45%;
+
+.caja-c{
+    background-color: rgba(0, 0, 0, 0.500);
+    color: red;
+}
+.cc1{
+    grid-area: area1;
+}
+.cc2{
+    grid-area: area2;
     
 }
-
+.cc3{grid-area: area3;
+margin: auto;
+height: 400px;
+width: 400px;
+}
 
 /*footer*/
 
@@ -192,6 +212,7 @@ box-sizing: 0;}
     width: 100%;    
     background-color: black;
     text-decoration: none;
+    
 }
 .foot-link{
 color: red;
@@ -201,3 +222,78 @@ display: inline-block;
 bottom: 0;
 
 }
+.footer ul{
+    list-style-type: none ;
+}
+/*mediaqueries*/
+@media screen and (max-width:480px) {
+    /*index responsive*/
+    .grid-layout-1{
+    grid-template-columns: auto;
+    grid-template-rows: repeat(3,1fr);
+    grid-template-areas: 'area1'
+    'area2'
+    'area3';}
+    .c1 iframe{
+        height: 400px;
+        width: 315px;
+    }
+    .c1{
+        padding: 10px;
+    }
+    .c2 {
+    background-image: url(../multimedia/em4.jpg);
+    object-fit: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-size: 20px;
+    padding: 20%;
+}
+.c2 img{
+    display: none;
+}
+.c3{
+    padding: 10px;
+}
+
+
+
+/*albumes responsive*/
+.grid-layout-3{
+    grid-template-columns: auto;
+    grid-template-rows: repeat(4,1fr);
+    grid-template-areas: 'area1'
+    'area2'
+    'area3'
+    'area5';
+    padding: 20px;
+    gap: 25px;
+}
+.ca1{margin-top: 20%;
+font-size: large;
+height: 30%;}
+.songs2{display: none;}
+.ca4{display: none;}
+.ca2 h3 { display: none;}
+.songs1{width: 100%;}
+.ca5{display: grid;
+height: 30%;
+}
+.ca5 a{text-decoration: solid;
+font-size: 24px;
+background-color: #1db954;
+color: black;
+border-radius: 100px ;
+margin-bottom: 25px;
+
+}
+}
+@media screen and (max-width: 1000px){
+    .ca1{
+        margin-top: 10%;
+    }
+    
+}
+    
+    
+
