--- a/css/style.css
+++ b/css/style.css
@@ -5,110 +5,43 @@
   margin: 0%;
 }
 
-body {
+.full-back {
   background-image: url(../multimedia/humo.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-@media screen and (max-width: 480px) {
-  /*index responsive*/
-  .grid-layout-1 {
-    grid-template-columns: auto;
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-areas: "area1" "area2" "area3";
-  }
-  .c1 iframe {
-    height: 400px;
-    width: 315px;
-  }
-  .c1 {
-    padding: 10px;
-  }
-  .c2 {
-    background-image: url(../multimedia/em4.jpg);
-    object-fit: cover;
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-size: 20px;
-    padding: 20%;
-  }
-  .c2 img {
-    display: none;
-  }
-  .c3 {
-    padding: 10px;
-  }
-  /*albumes responsive*/
-  .grid-layout-3 {
-    grid-template-columns: auto;
-    grid-template-rows: repeat(4, 1fr);
-    grid-template-areas: "area1" "area2" "area3" "area5";
-    padding: 20px;
-    gap: 25px;
-  }
-  .ca1 {
-    margin-top: 20%;
-    font-size: large;
-    height: 30%;
-  }
-  .songs2 {
-    display: none;
-  }
-  .ca4 {
-    display: none;
-  }
-  .ca2 h3 {
-    display: none;
-  }
-  .songs1 {
-    width: 100%;
-  }
-  .ca5 {
-    display: grid;
-    height: 30%;
-  }
-  .ca5 a {
-    text-decoration: solid;
-    font-size: 24px;
-    background-color: #1db954;
-    color: black;
-    border-radius: 100px;
-    margin-bottom: 25px;
-  }
+.landing {
+  background-color: rgb(0, 0, 0);
 }
-@media screen and (max-width: 1000px) {
-  .ca1 {
-    margin-top: 10%;
-  }
-}
-.grid-layout-1 {
-  width: 100%;
-  height: 100%;
+.landing .layout-1 {
   display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: auto;
-  grid-template-areas: "area1 area2" "area3 area3";
+  grid-template-columns: auto;
+  grid-template-rows: 50% 50%;
+  grid-template-areas: "area1" "area2";
+  gap: 5%;
   justify-content: center;
-  margin: 1%;
-  gap: 5px;
-  padding-top: 20px;
+  align-items: center;
 }
-.grid-layout-1 .caja-i {
-  width: 100%;
-  height: 100%;
-  text-align: center;
-}
-.grid-layout-1 .c1 {
+.landing .layout-1 h1 {
+  color: white;
   grid-area: area1;
 }
-.grid-layout-1 .c2 {
-  grid-area: area2;
+.landing .layout-1 .landing-1 {
+  height: 500px;
+  width: 400px;
+  margin-left: 17%;
+  text-decoration: none;
 }
-.grid-layout-1 .c3 {
-  grid-area: area3;
-  text-align: center;
+.landing .layout-1 .landing-1 button {
+  background-color: rgba(0, 0, 0, 0.5);
+  margin-left: 9%;
+  border-radius: 15%;
+}
+.landing .layout-1 .landing-1 button a {
+  color: white;
   font-size: 24px;
+  text-decoration: none;
 }
 
 .grid-layout-3 {
@@ -143,7 +76,7 @@ body {
   display: none;
 }
 
-.grid-layout-4 {
+.layout-4 {
   display: grid;
   grid-template-columns: 50%;
   grid-template-rows: auto;
@@ -166,7 +99,7 @@ body {
   grid-area: area2;
 }
 
-.grid-layout-5 {
+.layout-5 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: auto;
@@ -193,7 +126,7 @@ body {
   width: 400px;
 }
 
-.grid-layout-2 {
+.layout-2 {
   margin: 10px;
   display: grid;
   grid-template-columns: 50% 50%;
@@ -225,6 +158,7 @@ body {
   background-color: black;
   color: white;
   overflow: hidden;
+  margin-top: 20%;
 }
 .footer p {
   justify-content: center;
@@ -291,6 +225,7 @@ body {
 }
 .navbar-reg .navbar1 .nav-link-reg a:hover {
   background-size: 100% 100%;
+  transform: scale(1.1);
 }
 .navbar-reg .navbar1 .nav-link-reg .em1 {
   justify-content: left;
@@ -307,7 +242,7 @@ body {
   }
 }
 main div {
-  color: red;
+  color: white;
   background-color: rgba(0, 0, 0, 0.5);
 }
 main h1 {
@@ -315,9 +250,393 @@ main h1 {
 }
 main h2 {
   text-decoration: underline;
+  color: red;
 }
 main h3 {
   text-decoration: underline;
+  color: red;
+}
+main p {
+  color: white;
+}
+
+.ca5 {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.landing-1 {
+  background-image: url(../multimedia/EM1.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+@media screen and (max-width: 480px) {
+  /*index responsive*/
+  .landing .layout-1 {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 50% 50%;
+    grid-template-areas: "area1" "area2";
+    justify-content: center;
+    align-items: center;
+    gap: 3%;
+    margin-bottom: 50%;
+  }
+  .landing .layout-1 h1 {
+    text-align: center;
+  }
+  .landing .layout-1 .landing-1 {
+    margin: auto;
+    background-position: center;
+  }
+  /*albumes responsive*/
+  .grid-layout-3 {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-areas: "area1" "area2" "area3" "area5";
+    padding: 20px;
+    gap: 25px;
+  }
+  .ca1 {
+    margin-top: 20%;
+    font-size: large;
+    height: 30%;
+  }
+  .songs2 {
+    display: none;
+  }
+  .ca4 {
+    display: none;
+  }
+  .ca2 h3 {
+    display: none;
+  }
+  .songs1 {
+    width: 100%;
+  }
+  .ca5 {
+    display: grid;
+    height: 30%;
+  }
+  .ca5 a {
+    text-decoration: solid;
+    font-size: 24px;
+    background-color: #1db954;
+    color: black;
+    border-radius: 100px;
+    margin-bottom: 25px;
+  }
+  .layout-4 {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-areas: "area1" "area2" "area1";
+    justify-content: center;
+    margin-top: 20%;
+  }
+  .layout-4 .cb1 {
+    font-size: small;
+  }
+  .layout-4 .cb2 {
+    display: grid;
+  }
+  /*Contacto Responsive*/
+  .layout-5 {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-areas: "area1 area1" "area2 area2";
+  }
+  .layout-5 .cc3 {
+    display: none;
+  }
+  .layout-5 .cc2 {
+    background-image: url(../../multimedia/Logo2.jpg);
+  }
+  /*Noticias Responsive*/
+  .layout-2 {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-areas: "area1" "area1" "area2" "area3";
+    font-size: small;
+    justify-content: center;
+  }
+  .layout-2 .cn2 {
+    margin: 10%;
+  }
+  .layout-2 .cn2 table {
+    width: auto;
+  }
+  .layout-2 .cn3 {
+    margin: 10%;
+  }
+  .layout-2 .cn3 iframe {
+    width: auto;
+  }
+  .layout-2 .cn1 {
+    margin: 10%;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .ca1 {
+    margin-top: 10%;
+  }
+}
+@media screen and (max-width: 750px) {
+  /*Index Responsive*/
+  .landing .layout-1 {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 50% 50%;
+    grid-template-areas: "area1" "area2";
+    justify-content: center;
+    align-items: center;
+    gap: 3%;
+    margin-bottom: 50%;
+  }
+  .landing .layout-1 h1 {
+    text-align: center;
+  }
+  .landing .layout-1 .landing-1 {
+    margin: auto;
+    background-position: center;
+  }
+  /*albumes responsive*/
+  .grid-layout-3 {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-areas: "area1" "area2" "area3" "area5";
+    padding: 20px;
+    gap: 25px;
+  }
+  .ca1 {
+    margin-top: 20%;
+    font-size: large;
+    height: 30%;
+  }
+  .songs2 {
+    display: none;
+  }
+  .ca4 {
+    display: none;
+  }
+  .ca2 h3 {
+    display: none;
+  }
+  .songs1 {
+    width: 100%;
+  }
+  .ca5 {
+    display: grid;
+    height: 30%;
+  }
+  .ca5 a {
+    text-decoration: solid;
+    font-size: 24px;
+    background-color: #1db954;
+    color: black;
+    border-radius: 100px;
+    margin-bottom: 25px;
+  }
+  .layout-4 {
+    grid-template-columns: auto;
+    grid-template-rows: 50% 50%;
+    grid-template-areas: "area1" "area1";
+    justify-content: center;
+    margin-top: 20%;
+  }
+  .layout-4 .cb1 {
+    font-size: small;
+  }
+  .layout-4 .cb2 {
+    display: none;
+  }
+  /*contacto responsive*/
+  .layout-5 {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-areas: "area1 area1" "area2 area2";
+  }
+  .layout-5 .cc3 {
+    display: none;
+  }
+  .layout-5 .cc2 {
+    background-image: url(../../multimedia/Logo2.jpg);
+  }
+}
+.ca3 iframe:hover {
+  transform: scale(1.1, 1.1);
+  transition: 0.5s;
+}
+
+.ca4 iframe:hover {
+  transform: scale(1.1, 1.1);
+  transition: 0.5s;
+}
+
+.ca2 {
+  animation-name: deslizar;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  transition: 1s;
+}
+
+.ca5 a {
+  animation-name: resalt;
+  animation-duration: 4s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.layout-1 h1 {
+  animation-name: rainbow;
+  animation-duration: 7s;
+  animation-timing-function: linear;
+  animation-delay: 2s;
+}
+.layout-1 .landing-1 p {
+  text-align: center;
+  color: rgba(255, 255, 255, 0);
+  font-size: 24px;
+}
+.layout-1 .landing-1:hover {
+  transform: scale(1.1, 1.1);
+  transition: 0.5s;
+}
+.layout-1 .landing-1:hover p {
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.cn1 {
+  animation-name: deslizar;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  transition: 1s;
+}
+.cn1 h2 {
+  color: white;
+}
+.cn1:hover h2 {
+  color: red;
+}
+
+.cn3 {
+  animation-name: deslizar;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  transition: 1s;
+}
+.cn3 h2 {
+  color: white;
+}
+.cn3 h3 {
+  color: white;
+}
+.cn3:hover {
+  transform: scale(1.1, 1.1);
+  transition: 0.3s;
+}
+.cn3:hover h2 {
+  color: red;
+}
+.cn3:hover h3 {
+  animation-name: gradiente;
+  animation-duration: 3s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.cn2 h2 {
+  color: white;
+}
+.cn2:hover {
+  transform: scale(1.1, 1.1);
+  transition: 0.3s;
+  animation-name: gradiente;
+  animation-duration: 3s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  text-decoration: solid;
+}
+.cn2:hover h2 {
+  animation: none;
+  color: red;
+}
+
+.cc2:hover {
+  transform: translateX(10%) scale(1.1, 1.1);
+  transition: 0.7s;
+}
+
+@keyframes deslizar {
+  from {
+    scale: 0.1;
+  }
+  to {
+    scale: 1;
+  }
+}
+@keyframes resalt {
+  0% {
+    scale: 0.9;
+  }
+  50% {
+    scale: 1;
+  }
+  100% {
+    scale: 0.9;
+  }
+}
+@keyframes rainbow {
+  0% {
+    color: white;
+  }
+  10% {
+    color: rgb(82, 90, 158);
+  }
+  20% {
+    color: blue;
+  }
+  30% {
+    color: rgb(105, 17, 248);
+  }
+  40% {
+    color: violet;
+  }
+  50% {
+    color: rgb(255, 0, 166);
+  }
+  60% {
+    color: red;
+  }
+  70% {
+    color: rgb(255, 85, 0);
+  }
+  80% {
+    color: orange;
+  }
+  90% {
+    color: rgb(255, 196, 0);
+  }
+  100% {
+    color: rgb(238, 233, 163);
+  }
+}
+@keyframes gradiente {
+  0% {
+    color: white;
+  }
+  25% {
+    color: rgb(172, 119, 232);
+  }
+  50% {
+    color: rgb(142, 50, 212);
+  }
+  75% {
+    color: rgb(172, 119, 232);
+  }
+  100% {
+    color: white;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
