--- a/scss/base/_mediaq.scss
+++ b/scss/base/_mediaq.scss
@@ -1,70 +1,223 @@
-@media screen and (max-width:480px) {
-    /*index responsive*/
-    .grid-layout-1{
+@media screen and (max-width: 480px) {
+  /*index responsive*/
+
+  .landing {
+    .layout-1 {
+      display: grid;
+      grid-template-columns: auto;
+      grid-template-rows: 50% 50%;
+      grid-template-areas:
+        "area1"
+        "area2";
+      justify-content: center;
+      align-items: center;
+      gap: 3%;
+      margin-bottom: 50%;
+      h1 {
+        text-align: center;
+      }
+      .landing-1 {
+        margin: auto;
+        background-position: center;
+      }
+    }
+  }
+
+  /*albumes responsive*/
+  .grid-layout-3 {
     grid-template-columns: auto;
-    grid-template-rows: repeat(3,1fr);
-    grid-template-areas: 'area1'
-    'area2'
-    'area3';}
-    .c1 iframe{
-        height: 400px;
-        width: 315px;
-    }
-    .c1{
-        padding: 10px;
-    }
-    .c2 {
-    background-image: url(../multimedia/em4.jpg);
-    object-fit: cover;
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-size: 20px;
-    padding: 20%;
-}
-.c2 img{
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-areas:
+      "area1"
+      "area2"
+      "area3"
+      "area5";
+    padding: 20px;
+    gap: 25px;
+  }
+  .ca1 {
+    margin-top: 20%;
+    font-size: large;
+    height: 30%;
+  }
+  .songs2 {
     display: none;
-}
-.c3{
-    padding: 10px;
-}
+  }
+  .ca4 {
+    display: none;
+  }
+  .ca2 h3 {
+    display: none;
+  }
+  .songs1 {
+    width: 100%;
+  }
 
+  .ca5 {
+    display: grid;
+    height: 30%;
+  }
+  .ca5 a {
+    text-decoration: solid;
+    font-size: 24px;
+    background-color: #1db954;
+    color: black;
+    border-radius: 100px;
+    margin-bottom: 25px;
+  }
+  //Biografia responsive
+  .layout-4 {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-areas:
+      "area1"
+      "area2"
+      "area1";
+    justify-content: center;
+    margin-top: 20%;
+    .cb1 {
+      font-size: small;
+    }
+    .cb2 {
+      display: grid;
+    }
+  }
+  /*Contacto Responsive*/
+  .layout-5 {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-areas:
+      "area1 area1"
+      "area2 area2";
+    .cc3 {
+      display: none;
+    }
+    .cc2 {
+      background-image: url(../../multimedia/Logo2.jpg);
+    }
+  }
+/*Noticias Responsive*/
 
-
-/*albumes responsive*/
-.grid-layout-3{
+.layout-2{
     grid-template-columns: auto;
     grid-template-rows: repeat(4,1fr);
     grid-template-areas: 'area1'
+    'area1'
     'area2'
-    'area3'
-    'area5';
+    'area3';
+    .cn2{margin: 10%;
+    table{width: auto;}}
+    .cn3{margin: 10%;
+    iframe{
+        width: auto;
+    }}
+
+    font-size: small;
+    justify-content: center;
+    .cn1{margin: 10%;}
+}
+}
+@media screen and (max-width: 1000px) {
+  .ca1 {
+    margin-top: 10%;
+  }
+}
+
+//TABLETS
+@media screen and (max-width: 750px) {
+  /*Index Responsive*/
+  .landing {
+    .layout-1 {
+      display: grid;
+      grid-template-columns: auto;
+      grid-template-rows: 50% 50%;
+      grid-template-areas:
+        "area1"
+        "area2";
+      justify-content: center;
+      align-items: center;
+      gap: 3%;
+      margin-bottom: 50%;
+      h1 {
+        text-align: center;
+      }
+      .landing-1 {
+        margin: auto;
+        background-position: center;
+      }
+    }
+  }
+
+  /*albumes responsive*/
+  .grid-layout-3 {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-areas:
+      "area1"
+      "area2"
+      "area3"
+      "area5";
     padding: 20px;
     gap: 25px;
-}
-.ca1{margin-top: 20%;
-font-size: large;
-height: 30%;}
-.songs2{display: none;}
-.ca4{display: none;}
-.ca2 h3 { display: none;}
-.songs1{width: 100%;}
-.ca5{display: grid;
-height: 30%;
-}
-.ca5 a{text-decoration: solid;
-font-size: 24px;
-background-color: #1db954;
-color: black;
-border-radius: 100px ;
-margin-bottom: 25px;
+  }
+  .ca1 {
+    margin-top: 20%;
+    font-size: large;
+    height: 30%;
+  }
+  .songs2 {
+    display: none;
+  }
+  .ca4 {
+    display: none;
+  }
+  .ca2 h3 {
+    display: none;
+  }
+  .songs1 {
+    width: 100%;
+  }
 
-}
-
-}
-@media screen and (max-width: 1000px){
-    .ca1{
-        margin-top: 10%;
+  .ca5 {
+    display: grid;
+    height: 30%;
+  }
+  .ca5 a {
+    text-decoration: solid;
+    font-size: 24px;
+    background-color: #1db954;
+    color: black;
+    border-radius: 100px;
+    margin-bottom: 25px;
+  }
+  //Biografia responsive
+  .layout-4 {
+    grid-template-columns: auto;
+    grid-template-rows: 50% 50%;
+    grid-template-areas:
+      "area1"
+      "area1";
+    justify-content: center;
+    margin-top: 20%;
+    .cb1 {
+      font-size: small;
     }
-    
+    .cb2 {
+      display: none;
+    }
+  }
+  /*contacto responsive*/
+  .layout-5 {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-areas:
+      "area1 area1"
+      "area2 area2";
+    .cc3 {
+      display: none;
+    }
+    .cc2 {
+      background-image: url(../../multimedia/Logo2.jpg);
+    }
+  }
 }
-
