--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,10 +1,11 @@
-*{
-    box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding: 0%;
-    margin: 0%;
+* {
+  box-sizing: border-box;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 0%;
+  margin: 0%;
 }
-body{
-    background-image: url(../multimedia/humo.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;}
+.full-back {
+  background-image: url(../multimedia/humo.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
