--- a/scss/layout/_albumes.scss
+++ b/scss/layout/_albumes.scss
@@ -1,27 +1,32 @@
-.grid-layout-3{
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: auto;
-    grid-template-areas:
-    'area1 area1'
-    'area2 area2'
-    'area4 area4'
-    'area3 area3';
-    text-align: center;
-    margin: 1%;
-    gap: 5px;
-    padding-top: 5% ;
+.grid-layout-3 {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "area1 area1"
+    "area2 area2"
+    "area4 area4"
+    "area3 area3";
+  text-align: center;
+  margin: 1%;
+  gap: 5px;
+  padding-top: 5%;
 }
 
-.ca1{
-    grid-area: area1;
+.ca1 {
+  grid-area: area1;
 }
-.ca2{grid-area: area2;}
-.ca3{grid-area: area3;
+.ca2 {
+  grid-area: area2;
 }
-.ca4{grid-area: area4;}
+.ca3 {
+  grid-area: area3;
+}
+.ca4 {
+  grid-area: area4;
+}
 
-.ca5{
-    grid-area: area5;
-    display: none;
+.ca5 {
+  grid-area: area5;
+  display: none;
 }
