--- a/scss/layout/_biografia.scss
+++ b/scss/layout/_biografia.scss
@@ -1,18 +1,22 @@
-.grid-layout-4{
-    display: grid;
-    grid-template-columns: 50%;
-    grid-template-rows: auto;
-    grid-template-areas: 'area1 area2'
-    'area1 area2';
-    
-    padding-top: 5%;
-    margin: 1%;
-    gap: 5px;
-}
-.caja-b{
-    color: white;
-    font-size: 28px;
+.layout-4 {
+  display: grid;
+  grid-template-columns: 50%;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "area1 area2"
+    "area1 area2";
 
+  padding-top: 5%;
+  margin: 1%;
+  gap: 5px;
 }
-.cb1{grid-area: area1;}
-.cb2{grid-area: area2;}
+.caja-b {
+  color: white;
+  font-size: 28px;
+}
+.cb1 {
+  grid-area: area1;
+}
+.cb2 {
+  grid-area: area2;
+}
