--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -1,30 +1,37 @@
-.grid-layout-1{ width: 100%;
-    height: 100%;
+@import "../base/vars";
+
+.landing {
+  background-color: rgb(0, 0, 0);
+  .layout-1 {
     display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: auto;
-    grid-template-areas: 
-    'area1 area2'
-    'area3 area3';
+    grid-template-columns: auto;
+    grid-template-rows: 50% 50%;
+    grid-template-areas:
+      "area1"
+      "area2";
+    gap: 5%;
     justify-content: center;
-    margin: 1%;
-    gap: 5px;
-    padding-top: 20px; 
-    
-.caja-i{
-    width: 100%;
-    height: 100%;
-    text-align: center;
-}
-.c1{
-    grid-area: area1;
-    
-}
-.c2{
-    grid-area: area2;
-}
-.c3{grid-area: area3;
-    text-align: center;
-    font-size: 24px;
-}
+    align-items: center;
+
+    h1 {
+      color: white;
+      grid-area: area1;
+    }
+    .landing-1 {
+      height: 500px;
+      width: 400px;
+      margin-left: 17%;
+      text-decoration: none;
+      button {
+        background-color: $fondo-oscuro;
+        margin-left: 9%;
+        border-radius: 15%;
+        a {
+          color: white;
+          font-size: 24px;
+          text-decoration: none;
+        }
+      }
+    }
+  }
 }
