--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -1,50 +1,55 @@
 /*Navbar intercambiable*/
-.navbar-480px {display: none;}
-@media screen and (max-width:480px){
-    .navbar-480px{display: initial;}
-    .navbar-reg{display: none;}
+.navbar-480px {
+  display: none;
 }
-.navbar-reg{
-    
-    .navbar1{
-        background-color: #212529;
-        width: 100%;
-        
-        .nav-link-reg{
-            display: flex;
-            flex-direction: row;
-            align-items: center ;
-            li{
-            list-style-type: none;
-            gap: 10px;
-            padding: 20px;     
-            
-            }
-            a{
-                color: white;
-                text-decoration: none;
-                background-image: linear-gradient(to right, red, red);
-                background-position: 50% 100%;
-                background-repeat: no-repeat;
-                background-size: 0% 2%;
-                transition: 0.3s;
-                &:hover {
-                    background-size: 100% 100%;
-                }
-            }
-            .em1{
-                justify-content: left;
-                font-size: larger;
-                margin-right: 5%;
+@media screen and (max-width: 480px) {
+  .navbar-480px {
+    display: initial;
+  }
+  .navbar-reg {
+    display: none;
+  }
+}
+.navbar-reg {
+  .navbar1 {
+    background-color: #212529;
+    width: 100%;
 
-            }
-            
-            }
-
-           
+    .nav-link-reg {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      li {
+        list-style-type: none;
+        gap: 10px;
+        padding: 20px;
+      }
+      a {
+        color: white;
+        text-decoration: none;
+        background-image: linear-gradient(to right, red, red);
+        background-position: 50% 100%;
+        background-repeat: no-repeat;
+        background-size: 0% 2%;
+        transition: 0.3s;
+        &:hover {
+          background-size: 100% 100%;
+          transform: scale(1.1);
         }
+      }
+      .em1 {
+        justify-content: left;
+        font-size: larger;
+        margin-right: 5%;
+      }
+    }
+  }
 }
-@media screen and (max-width:760px){
-    .navbar-reg{display: none;}
-    .navbar-480px{display: initial;}
+@media screen and (max-width: 760px) {
+  .navbar-reg {
+    display: none;
+  }
+  .navbar-480px {
+    display: initial;
+  }
 }
