--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,26 +1,47 @@
 //imports
-@import 'base/reset';
-@import 'base/vars';
-@import 'base/mediaq';
-//Layouts
-@import 'layout/index';
-@import 'layout/albumes';
-@import 'layout/biografia';
-@import 'layout/contacto';
-@import 'layout/noticias';
-@import 'layout/footer';
-@import 'layout/nav';
+@import "base/reset";
+@import "base/vars";
 
+//Layouts
+@import "layout/index";
+@import "layout/albumes";
+@import "layout/biografia";
+@import "layout/contacto";
+@import "layout/noticias";
+@import "layout/footer";
+@import "layout/nav";
 
 //Estilos
-main{
-    div{
-    color: $letras;
+main {
+  div {
+    color: white;
     background-color: $fondo-oscuro;
-}
-h1{
+  }
+  h1 {
     text-decoration: underline;
+  }
+
+  h2 {
+    text-decoration: underline;
+    color: red;
+  }
+  h3 {
+    text-decoration: underline;
+    color: red;
+  }
+  p {
+    color: white;
+  }
 }
-h2{text-decoration: underline;}
-h3{text-decoration: underline;}
+.ca5 {
+  background-color: $fondo-oscuro;
 }
+.landing-1 {
+  background-image: url(../multimedia/EM1.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+//Functions
+@import "base/mediaq";
+@import "base/animatons";
