--- a/scss/base/_animatons.scss
+++ b/scss/base/_animatons.scss
@@ -115,6 +115,11 @@
     scale(1.1,1.1);
     transition: 0.7s;
 }}
+.cc2{&:focus{
+
+  transform:scale(1.0,1.0);
+  transition: 0.7s;
+}}
 //Keyframe
 @keyframes deslizar {
   from {
